--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Chats#show</h1>
-<p>Find me in app/views/chats/show.html.erb</p>
+<h1>Chat Room</h1>
+
+<div id="messages">
+  <%= render @messages %>
+</div>
