--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -3,3 +3,8 @@
 <div id="messages">
   <%= render @messages %>
 </div>
+
+<form>
+  <label>Your message:</label><br>
+  <input type="text" data-behavior="chat_speaker">
+</form>
