--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,10 +1,9 @@
 <h1>Chat Room</h1>
 
 <div id="messages">
-  <%= render @messages %>
 </div>
 
 <form>
-  <label>Your message:</label><br>
+  <label>Press ENTER to send your message:</label><br>
   <input type="text" data-behavior="chat_speaker">
 </form>
