--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,9 +1,15 @@
 <h1>Chat Room</h1>
 
-<div id="messages">
-</div>
-
 <form>
   <label>Press ENTER to send your message:</label><br>
   <input type="text" data-behavior="chat_speaker">
 </form>
+
+
+<div id="messages"></div>
+
+<div id="earliermessages">
+  <% @messages.reverse.each do |message| %>
+      <b><%= message.user['email'] %></b>: <%= message.content %> <br><br>
+  <% end %>
+</div>
