create react welcome message and all messages created are rendered using react.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Welcome! Come on in and chat.</h1>
 
-<%= react_component('Message', props={content: 'You found the home page'}) %>
+<%= react_component('Message', props={author: 'Andrew Patterson', content: 'Thanks for visiting!'}) %>
