--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,4 +4,8 @@
   <p><a href="/chats">Go to Chat Room Now!</a></p>
 </div>
 
-<%= react_component('Message', props={author: 'Andrew Patterson', content: 'Thanks for visiting!'}) %>
+<ul class="list-group">
+  <li class="list-group-item list-group-item-info">
+    <%= react_component('Message', props={author: 'Andrew Patterson', content: 'Thanks for visiting!'}) %>
+  </li>
+</ul>
